Big update to front page

--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ body {
   font-weight: 400;
   overflow-x: hidden;
   position: relative;
-  background-color: #121212 !important;
+  background-color: #fff !important;
   color: #fff !important;
   font-family: 'Centra', sans-serif !important;
 }
@@ -619,3 +619,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   letter-spacing: 0.5px;
   margin-top: 20px;
 }
+
+.sidebar {
+  width: 80px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
